--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header_logo">
+          <div class="header_map">
+            <div class="logo1">
+              <img class="logo" src="./img/logo.svg" alt="img" />
+            </div>
+            <div class="logo2">
+              <img class="manu" src="./img/header_menu.svg" alt="img" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <section class="home">
+      <div class="container">
+        <div class="home_about">
+          <img src="./img/home.svg" alt="" />
+          <h1 class="home_text">
+            Lorem Ipsum is simply dummy text of the printing and.
+          </h1>
+          <p class="home_about_text">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="section2">
+      <div class="container">
+        <div class="section2_logos">
+          <img src="./img/section2_location.svg" alt="img" />
+          <img src="./img/section2_location.svg" alt="img" />
+          <img src="./img/section2_location.svg" alt="img" />
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
