--- a/index.html
+++ b/index.html
@@ -38,9 +38,54 @@
     <section class="section2">
       <div class="container">
         <div class="section2_logos">
-          <img src="./img/section2_location.svg" alt="img" />
-          <img src="./img/section2_location.svg" alt="img" />
-          <img src="./img/section2_location.svg" alt="img" />
+          <img
+            class="section2_logo"
+            src="./img/section2_location.svg"
+            alt="img"
+          />
+          <img
+            class="section2_logo"
+            src="./img/section2_location.svg"
+            alt="img"
+          />
+          <img
+            class="section2_logo"
+            src="./img/section2_location.svg"
+            alt="img"
+          />
+        </div>
+      </div>
+    </section>
+    <section class="section3">
+      <div class="container">
+        <div class="section3_lorem">
+            <img class="img_laptop_big" src="./img/big_laptop.svg" alt="">
+          <div class="important_lorem_section3">
+            <h1 class="about_us_top">Lorem Ipsum is simply dummy text.</h1>
+            <p class="about_us">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.Lorem Ipsum is simply dummy .
+            </p>
+            <div class="you_can_works">
+              <div class="img_about_can">
+                <img src="./img/section3_can.svg" alt="" />
+                <p class="about_can">Lorem Ipsum is simply</p>
+              </div>
+              <div class="img_about_can">
+                <img src="./img/section3_can.svg" alt="" />
+                <p class="about_can">Lorem Ipsum is simply</p>
+              </div>
+              <div class="img_about_can">
+                <img src="./img/section3_can.svg" alt="" />
+                <p class="about_can">Lorem Ipsum is simply</p>
+              </div>
+              <div class="img_about_can">
+                <img src="./img/section3_can.svg" alt="" />
+                <p class="about_can">Lorem Ipsum is simply</p>
+              </div>
+            </div>
+            <img class="img_laptop" src="./img/laptop.svg" alt="img">
+          </div>
         </div>
       </div>
     </section>
